Finishes e2o integration